# Agent_RAG

./: .gitignore  README.md  SUPABASE_MIGRATION.md  pyproject.toml
data_tools/0_shared/: .env.example  config.py  db_sqlite.py  docker-compose.yaml  ingest_db.py  init_db.py  pyproject.toml
data_tools/0_shared/data/: collections.csv  collections.parquet  film_genres.csv  film_genres.parquet  genres.csv  genres.parquet  horror_movies_db.csv  horror_movies_rt_scores.csv  realisateurs.csv  realisateurs.parquet  scores_imdb.csv  scores_imdb.parquet  scores_rt.csv  scores_rt.parquet  scores_tmdb.csv  scores_tmdb.parquet
data_tools/0_shared/raw_data/: horror_movies_imdb_scores.csv
data_tools/0_shared/services/: config.py  creation_id.py  db_cleaner.py  imdb_cleaner.py  kaggle_cleaner.py  rt_cleaner.py  slug.py  tmdb_cleaner.py
data_tools/0_shared/services_database/: build_collection.py  build_films.py  build_genre.py  build_realisateur.py  build_scores_imdb.py  build_scores_rt.py  build_scores_tmdb.py  config.py  export.py  ingest_collection.py  ingest_films.py  ingest_genre.py  ingest_realisateur.py  ingest_scores_imdb.py  ingest_scores_rt.py  ingest_scores_tmdb.py
data_tools/0_shared/sqlite/: horror_db.sqlite
data_tools/0_shared/tables/: __init__.py  collections.py  film_genres.py  films.py  genres.py  realisateurs.py  scores_imdb.py  scores_rt.py  scores_tmdb.py
data_tools/1_web_scrapping/: pyproject.toml
data_tools/1_web_scrapping/data/: horror_movies_rt_scores.csv  horror_movies_rt_scores_raw.csv
data_tools/1_web_scrapping/rt_sitemaps/: movie_0.xml  movie_1.xml  movie_10.xml  movie_11.xml  movie_12.xml  movie_13.xml  movie_14.xml  movie_15.xml  movie_16.xml  movie_17.xml  movie_18.xml  movie_19.xml  movie_2.xml  movie_20.xml  movie_21.xml  movie_22.xml  movie_23.xml  movie_3.xml  movie_4.xml  movie_5.xml  movie_6.xml  movie_7.xml  movie_8.xml  movie_9.xml
data_tools/1_web_scrapping/scr/: crawler.py  merge.py  scrapper.py
data_tools/2_api_externe/: .coverage  .env.exemple  pyproject.toml
data_tools/4_database/: pyproject.toml
(+35 files in other folders)
